added structure footer, fixed mobile menu button

--- a/css/style.css
+++ b/css/style.css
@@ -600,3 +600,10 @@ footer h5 {
     color: #fff;
     font-size: 22px;
 }
+.lower-footer {
+    background-color: #222;
+    color:#777;
+    text-align: center;
+    padding:7px;
+    font-family: "San Francisco";
+}
