--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,20 @@ body {
     padding-top: 130px;
 }
 
+a {
+  color: rgba(0, 172, 137, 1.0);
+  text-decoration: none;
+}
+
+a:focus {
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+a:hover,
+a:focus {
+  color: rgba(0, 172, 137, 1.0);;
+  text-decoration: underline;
+}
 
 /* TYPOGRAPHY *?
 
