--- a/css/style.css
+++ b/css/style.css
@@ -753,7 +753,7 @@ footer h5 {
 
 /* form control input styles */
 
-.form-control {
+.form-control.on-dark {
     display: block;
     width: 100%;
     height: 34px;
@@ -770,7 +770,7 @@ footer h5 {
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.form-control:focus {
+.form-control.on-dark:focus {
     border-color: #F75A56;
     outline: 0;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
