--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,22 @@ body {
 }
 
 a {
-  color: rgba(0, 172, 137, 1.0);
-  text-decoration: none;
+    color: rgba(0, 172, 137, 1.0);
+    text-decoration: none;
 }
 
 a:focus {
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
 }
+
 a:hover,
 a:focus {
-  color: rgba(0, 172, 137, 1.0);;
-  text-decoration: underline;
+    color: rgba(0, 172, 137, 1.0);
+    ;
+    text-decoration: underline;
 }
+
 
 /* TYPOGRAPHY *?
 
@@ -529,6 +532,11 @@ fieldset[disabled] .btn-pink.focus {
     margin-top: 32px;
 }
 
+.portfolio h5 a:after {
+    content: "  \f105";
+    font-family: FontAwesome;
+}
+
 
 /* portfolio projects */
 
@@ -724,7 +732,7 @@ footer {
     min-height: 100px;
     color: #fff;
     padding: 60px 0;
-    margin-top:40px;
+    margin-top: 40px;
 }
 
 footer .col-sm-6,
@@ -767,7 +775,8 @@ footer h5 {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
     -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
     -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .form-control.on-dark:focus {
