--- a/css/style.css
+++ b/css/style.css
@@ -884,24 +884,6 @@ section.clients ul {
     margin: 20px auto;
 }
 
-section.portfolio-content p {
-    font-family: "San Francisco";
-    font-weight: 500;
-    line-height: 28px;
-    color: #222;
-    font-size: 22px;
-    margin: 20px auto;
-}
-
-section.portfolio-content h3 {
-    font-family: "San Francisco";
-    font-weight: 700;
-    line-height: 28px;
-    color: #222;
-    font-size: 28px;
-    margin: 20px auto;
-}
-
 
 /* color palette */
 
@@ -1042,14 +1024,6 @@ fieldset[disabled] .form-control {
 
 /* portfolio content */
 
-.project-jumbotron {
-    height: 350px;
-    background-color: #e5e5e5;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
 .project-starbucks-img {
     background-image: url('../img/starbucks-artwork-montreal-city-by-loogart.jpg');
 }
@@ -1060,4 +1034,43 @@ fieldset[disabled] .form-control {
 .img-portfolio-scroller {
     height:400px;
     margin-right:15px;
+}
+
+section.portfolio-content p {
+    font-family: "San Francisco";
+    font-weight: 500;
+    line-height: 28px;
+    color: #222;
+    font-size: 22px;
+    margin: 20px auto;
+}
+
+section.portfolio-content h3 {
+    font-family: "San Francisco";
+    font-weight: 700;
+    line-height: 28px;
+    color: #222;
+    font-size: 28px;
+    margin: 20px auto;
+}
+
+.project-jumbotron {
+    height: 350px;
+    background-color: #e5e5e5;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+section.loog-collection img {
+    margin: 15px auto;
+    background-color: #e5e5e5;
+    width:100%;
+    height:100%;
+}
+
+img .lazy{
+       width:100%;
+    height:100%; 
 }
