--- a/css/style.css
+++ b/css/style.css
@@ -1092,7 +1092,7 @@ section.contact p {
 
 /* custom modal POPUP */
 
-.modal .popup {
+.modal.popup {
     position: fixed;
     top: 0;
     right: 0;
@@ -1105,23 +1105,25 @@ section.contact p {
     outline: 0;
 }
 
-.popup .modal.fade .modal-dialog {
-    -webkit-transition: -webkit-transform .1s ease-out;
-    -o-transition: -o-transform .1s ease-out;
-    transition: transform .1s ease-out;
+.modal.popup .modal-dialog {
+    max-width: 400px;
+}
+
+.modal.popup.fade .modal-dialog {
+    -webkit-transition: -webkit-transform .3s ease-out;
+    -o-transition: -o-transform .3s ease-out;
+    transition: transform .3s ease-out;
     -webkit-transform: translate(0, -100%);
     -ms-transform: translate(0, -100%);
     -o-transform: translate(0, -100%);
     transform: translate(0, -100%);
-    max-width: 400px;
 }
 
-.popup .modal.in .modal-dialog {
+.modal.popup.in .modal-dialog {
     -webkit-transform: translate(0, 0);
     -ms-transform: translate(0, 0);
     -o-transform: translate(0, 0);
     transform: translate(0, 0);
-    max-width: 400px;
 }
 
 .modal.popup .modal-content {
