Compressed all images

--- a/css/style.css
+++ b/css/style.css
@@ -846,7 +846,7 @@ section.portfolio {
 .jumbotron-about {
     background-color: #fff;
     min-height: 360px;
-    background-image: url('../img/chris-soueidan-loogart.png');
+    background-image: url('../img/chris-soueidan-loogart.jpg');
     background-repeat: no-repeat;
     background-size: 600px;
     background-position: center;
